<package>
  <name>pyros_test</name>
  <version>0.0.3</version>
  <description>
  Test Package for Pyros Setup
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/pyros-test</url>
  <url type="bugtracker">https://github.com/asmodehn/pyros-test/issues</url>

  <author email="asmodehn@gmail.com">AlexV</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- these dependencies are only for testing -->
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostopic</test_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>

</package>


